--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <p><strong>Adresa:</strong> Sv. Anny 1, 034 01 Ružomberok</p>
         <p><strong>Telefón:</strong> [Doplňte kontaktné údaje]</p>
         <p><strong>Webová stránka:</strong> <a href="https://www.lingas.sk" rel="dofollow">www.lingas.sk</a></p>
-        <p><strong>Sociálne siete:</strong> <a href="#">Facebook</a> | <a href="#">Instagram</a></p>
+        <p><strong>Sociálne siete:</strong> <a href="https://www.facebook.com/lingassro">Facebook</a> | <a href="https://www.linkedin.com/in/lingas-sk/">LinkedIn</a></p>
     </footer>
 </body>
 </html>
