--- a/index.html
+++ b/index.html
@@ -70,10 +70,14 @@
     </section>
 
     <footer>
-        <h2>📞 Spojte sa s nami</h2>
-        <p><strong>Adresa:</strong> Sv. Anny 1, 034 01 Ružomberok</p>
+        <h2>📞 Spojte sa s nami: Lingas.sk - interiérové štúdio </h2>
+        <p><strong>Adresa:</strong> Sv. Anny 4787/1A, 034 01 Ružomberok</p>
+        <p><strong>Otváracie hodiny:</strong> Po-Pia od 9.00 - 17.00 hod.</p>
+        <p><strong>Navigácia</strong> <a href="https://www.google.com/maps?q=Lingas+interierove+studio+interierove+dvere+Sv.+Anny+4787/1A+Ruzomberok" rel="dofollow">Zobraziť na mape</a></p>
         <p><strong>Webová stránka:</strong> <a href="https://www.lingas.sk" rel="dofollow">Lingas</a></p>
         <p><strong>Sociálne siete:</strong> <a href="https://www.facebook.com/lingassro">Facebook</a> | <a href="https://www.linkedin.com/in/lingas-sk/">LinkedIn</a></p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3154.6210135453784!2d19.308408799999995!3d49.0764321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4715a7c822ddb2e7%3A0x96bb202330e8e764!2zTGluZ2FzLnNrIC0gaW50ZXJpw6lyb3bDqSDFoXTDumRpbw!5e1!3m2!1ssk!2ssk!4v1756359124443!5m2!1ssk!2ssk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
 </body>
 </html>
+
